fix keyboard spacing, add google font

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;0,900;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@600&display=swap');
 
 :root {
   --color-tone-1: #ffffff;
@@ -30,6 +31,7 @@
 
   --game-max-width: 500px;
   --header-height: 66px;
+  --banner-height: 40px;
   --keyboard-height: 200px;
   --keyboard-width: var(--game-max-width);
 }
@@ -51,7 +53,7 @@ body {
 }
 
 .banner {
-  height: 45px;
+  height: var(--banner-height);
   background-color: var(--color-tone-5);
   color: var(--color-tone-9);
   border: 1px solid var(--color-tone-6);
@@ -103,6 +105,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 10px;
 }
 
 .board {
@@ -193,8 +196,9 @@ body {
 
 .keyboard {
   height: var(--keyboard-height);
+  max-width: 100%;
   width: var(--keyboard-width);
-  margin: 8px;
+  padding: 0 8px 0 8px;
 }
 
 .keyboard-row {
@@ -218,7 +222,16 @@ body {
   color: var(--key-text-color);
   flex-grow: 1;
   flex-shrink: 1;
-  font-family: monospace;
+  font-family: 'chivo mono', monospace;
+}
+
+.key:hover {
+  background-color: var(--color-tone-9);
+  color: var(--color-tone-5);
+}
+
+.key:last-of-type {
+  margin: 0;
 }
 
 .key-one-and-a-half {
